[package]
name = "kramer_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["client", "cache", "standard_framework"] }
tokio = {version = "1.16.1", features = ["full"]}
dotenv = "0.15.0"
songbird = { version = "0.2.1", default-features = false, features = ["gateway", "serenity-rustls"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"
features = ["rustls", "serenity", "songbird"]
